--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: Test with PyTest
       run: |
-        pip install pytest pytest-cov -y
+        pip install pytest pytest-cov
         pytest --cov=inflammation.models tests/test_models.py
